tests/NormalTests/paczka1/fuzzy1/89220965.err
Error in line 4: fmQwPelRI A274 79,1
Error in line 2: Ys4g A535 660,4
Error in line 14: S599 A535 27,1
Error in line 10: fmQwPelRI S682 71,2
Error in line 20: fmQwPelRI S599 19,2
Error in line 15: M4h5vv4DPn9 S682 45,7
